<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YoumiDiyOfferWall</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="award_points">奖励20积分</string>
    <string name="spend_points">消耗10积分</string>
    <string name="btn_get_add_fans_ad">(New)请求加粉广告列表</string>
    <string name="get_all_app_opt">请求所有广告 （游戏先于应用展示）</string>
    <string name="get_all_game_opt">请求所有广告 （应用先于游戏展示）</string>
    <string name="get_game">请求游戏类型广告</string>
    <string name="get_app">请求应用类型广告</string>
    <string name="get_extra_task_list">请求追加任务列表</string>
    <string name="next_page">下一页</string>
    <string name="last_page">上一页</string>

</resources>